# ChangeLog for app-mobilephone/wammu
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/wammu/ChangeLog,v 1.23 2007/09/06 10:28:04 mrness Exp $

*wammu-0.21-r1 (06 Sep 2007)

  06 Sep 2007; Alin Năstac <mrness@gentoo.org>
  +files/wammu-wxversion-2.6.patch, +wammu-0.21-r1.ebuild:
  Select wxpython 2.6 in case there are others available (#191304).

  22 Aug 2007; Christian Faulhammer <opfer@gentoo.org> wammu-0.21.ebuild:
  stable x86, bug 139308

  31 Jul 2007; Christoph Mende <angelos@gentoo.org> wammu-0.20.ebuild:
  Stable on amd64 wrt bug #178635

*wammu-0.21 (01 Jul 2007)

  01 Jul 2007; Alin Năstac <mrness@gentoo.org> -wammu-0.16.ebuild,
  -wammu-0.17.ebuild, -wammu-0.19.ebuild, +wammu-0.21.ebuild:
  Remove old versions. Version bump (#183123).

  19 Jun 2007; Christian Faulhammer <opfer@gentoo.org> wammu-0.20.ebuild:
  stable x86, bug 178635

*wammu-0.20 (22 May 2007)

  22 May 2007; Alin Năstac <mrness@gentoo.org> +wammu-0.20.ebuild:
  Version bump.

*wammu-0.19 (23 Mar 2007)

  23 Mar 2007; Alin Năstac <mrness@gentoo.org> +wammu-0.19.ebuild:
  Version bump.

  14 Jan 2007; Alin Năstac <mrness@gentoo.org> -wammu-0.13.ebuild,
  -wammu-0.15.ebuild:
  Remove obsolete versions (#159030).

*wammu-0.17 (15 Nov 2006)

  15 Nov 2006; Alin Nastac <mrness@gentoo.org> wammu-0.16.ebuild,
  +wammu-0.17.ebuild:
  Stable on x86. Version bump.

  26 Oct 2006; Piotr Jaroszyński <peper@gentoo.org> wammu-0.16.ebuild:
  Add pybluez dep for amd64 as pybluez is ~amd64 now.

*wammu-0.16 (13 Oct 2006)

  13 Oct 2006; Alin Nastac <mrness@gentoo.org> +wammu-0.16.ebuild:
  Version bump.

*wammu-0.15 (17 Sep 2006)

  17 Sep 2006; Alin Nastac <mrness@gentoo.org> +wammu-0.15.ebuild:
  Version bump.

  12 Jul 2006; Alin Nastac <mrness@gentoo.org> -wammu-0.12.ebuild:
  Remove old version.

  02 Jun 2006; Alin Nastac <mrness@gentoo.org> -wammu-0.11.ebuild,