@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX wammu-wxversion-2.6.patch 266 RMD160 1e57d4b4a216abc08a06d8f003ebc50eb8d77ba5 SHA1 00444bd460873c60ac853dafa36fd2f757a318fd SHA256 325ec1dc477904b79c32493489e52ac8291ac63dd9609df0504d1bf675af1517
-MD5 14e582742bce865a64fee41ad9772227 files/wammu-wxversion-2.6.patch 266
-RMD160 1e57d4b4a216abc08a06d8f003ebc50eb8d77ba5 files/wammu-wxversion-2.6.patch 266
-SHA256 325ec1dc477904b79c32493489e52ac8291ac63dd9609df0504d1bf675af1517 files/wammu-wxversion-2.6.patch 266
+AUX wammu-wxversion.patch 275 RMD160 a5da815607895c453a792a1d96c4b498d8d39adb SHA1 2e8808e352d9ec9c1fcf32910655e3ab33212c5b SHA256 6c3d6f1a3b50a9a6b9e5863dccbd421e8c50898aa1f88bc2c4ad58361bc8571b
+MD5 13948fd290cea62fce6e88019c4e091b files/wammu-wxversion.patch 275
+RMD160 a5da815607895c453a792a1d96c4b498d8d39adb files/wammu-wxversion.patch 275
+SHA256 6c3d6f1a3b50a9a6b9e5863dccbd421e8c50898aa1f88bc2c4ad58361bc8571b files/wammu-wxversion.patch 275
 DIST wammu-0.20.tar.bz2 267646 RMD160 e0d540568f10312720f072944d8b2221bd52b124 SHA1 3d07a075a14f36378c8b12328d286b504c8848fe SHA256 9ae38804601f5daeb162a34da7e1bbfc1364df8a37d1cf27a44b884af7c00995
 DIST wammu-0.21.tar.bz2 278255 RMD160 2d590c528700c2fa61745b9ddea4f623cbe0899d SHA1 c023225dc2ba4c705a98968ea493ed5e13d96568 SHA256 16c85bfe200afe96b0cbbd093b55c14cd566de86cde550fcf0d22ae07e1bddc1
 EBUILD wammu-0.20.ebuild 951 RMD160 5d40f32f1d06d787ad02553b399c2e255628ffb4 SHA1 70f15c69c28763fa0c6dc0d2cc536d917b5fe920 SHA256 ea1cde146757196f2865ce4202afae2c28ab74ea5049cc7532547b7fa6373913
 MD5 ec517e2af3d344465208d18f7d8abab3 wammu-0.20.ebuild 951
 RMD160 5d40f32f1d06d787ad02553b399c2e255628ffb4 wammu-0.20.ebuild 951
 SHA256 ea1cde146757196f2865ce4202afae2c28ab74ea5049cc7532547b7fa6373913 wammu-0.20.ebuild 951
-EBUILD wammu-0.21-r1.ebuild 1505 RMD160 a236dfc8ba7c442990b2b4e48e22da2cd0d05f2e SHA1 31ec17313d5759f5d4626fe9a6c2c3552710365a SHA256 0f89b2d5a7ff49d25cb1fb9ca2557b705357fc5af6b8cfbd5d45a10e4bcc9583
-MD5 04c63f906420231d78ebdd1cbd217ff2 wammu-0.21-r1.ebuild 1505
-RMD160 a236dfc8ba7c442990b2b4e48e22da2cd0d05f2e wammu-0.21-r1.ebuild 1505
-SHA256 0f89b2d5a7ff49d25cb1fb9ca2557b705357fc5af6b8cfbd5d45a10e4bcc9583 wammu-0.21-r1.ebuild 1505
+EBUILD wammu-0.21-r2.ebuild 2253 RMD160 048b43d125d8e42b1bc89f605a4e264319d615b0 SHA1 8cea8b42efea3dbb50174c040e3a069b06e5f11f SHA256 f0a2ecf7e4b95a0e13b1aa595b79ee88a12fc7d14fb69046d0cfa3be8af6ffdc
+MD5 20bc1eb10132ba956aa837dfea277406 wammu-0.21-r2.ebuild 2253
+RMD160 048b43d125d8e42b1bc89f605a4e264319d615b0 wammu-0.21-r2.ebuild 2253
+SHA256 f0a2ecf7e4b95a0e13b1aa595b79ee88a12fc7d14fb69046d0cfa3be8af6ffdc wammu-0.21-r2.ebuild 2253
 EBUILD wammu-0.21.ebuild 1346 RMD160 d347d678b08b2f6c7c854f64943324f63423bd07 SHA1 ad63e76a97f72ffc09f6e044b8e6cc6913a5f86f SHA256 d44fcacfee58f5d13c78818e6855e55c430c9289352c480f9aa5af758733cb92
 MD5 732083ca5a790ba0ef8914c76db332f1 wammu-0.21.ebuild 1346
 RMD160 d347d678b08b2f6c7c854f64943324f63423bd07 wammu-0.21.ebuild 1346
 SHA256 d44fcacfee58f5d13c78818e6855e55c430c9289352c480f9aa5af758733cb92 wammu-0.21.ebuild 1346
-MISC ChangeLog 3761 RMD160 c35f2f8a9dbb51be41372e7320cc03889fefe447 SHA1 ec8141a77fea23c388a1194aa5e792a044a8d4f1 SHA256 b627c069edcdb974d86a5e1b3db26b0434327dd6305c499748e74d23e9e83773
-MD5 49aac0c6e24bc622b7633890b5a01973 ChangeLog 3761
-RMD160 c35f2f8a9dbb51be41372e7320cc03889fefe447 ChangeLog 3761
-SHA256 b627c069edcdb974d86a5e1b3db26b0434327dd6305c499748e74d23e9e83773 ChangeLog 3761
+MISC ChangeLog 4043 RMD160 76a37a4da5299c98915ba933121426ac4ee2ced1 SHA1 bf0a27a1131c7ef5362fd9f1b2012b9f89fe9718 SHA256 1b6fb24787b86de833a223bb96588f5b46634e03a4e3494bc3a42a9ff1111960
+MD5 ae3f2532a4d10f14acab9c99ce870e12 ChangeLog 4043
+RMD160 76a37a4da5299c98915ba933121426ac4ee2ced1 ChangeLog 4043
+SHA256 1b6fb24787b86de833a223bb96588f5b46634e03a4e3494bc3a42a9ff1111960 ChangeLog 4043
 MISC metadata.xml 165 RMD160 1bf9089beacb19ba770d553d02356566ecd76892 SHA1 866903a1177187bfcc803fb62e0e3be2a2674481 SHA256 576ea680ccc744a6279987ce542f52f215515a2b4e95bd08c61a66bba9af1c57
 MD5 8e1fd49c29f85eea8da87d6e7de450c6 metadata.xml 165
 RMD160 1bf9089beacb19ba770d553d02356566ecd76892 metadata.xml 165
@@ -33,13 +33,13 @@ SHA256 a8235e909f6640fdf9f2601865646fb6a197ff3bac288d881f14d477e57fbf74 files/di
 MD5 7e09fef51d69c5d8be2e81f996d527cb files/digest-wammu-0.21 235
 RMD160 2032a73334ab4308e21a0a0c686b67af5347fcb3 files/digest-wammu-0.21 235
 SHA256 813f22630c3294be1e7c74ec64b9d23aac15e77835914667bdb59bb66c27d04a files/digest-wammu-0.21 235
-MD5 7e09fef51d69c5d8be2e81f996d527cb files/digest-wammu-0.21-r1 235
-RMD160 2032a73334ab4308e21a0a0c686b67af5347fcb3 files/digest-wammu-0.21-r1 235
-SHA256 813f22630c3294be1e7c74ec64b9d23aac15e77835914667bdb59bb66c27d04a files/digest-wammu-0.21-r1 235
+MD5 7e09fef51d69c5d8be2e81f996d527cb files/digest-wammu-0.21-r2 235
+RMD160 2032a73334ab4308e21a0a0c686b67af5347fcb3 files/digest-wammu-0.21-r2 235
+SHA256 813f22630c3294be1e7c74ec64b9d23aac15e77835914667bdb59bb66c27d04a files/digest-wammu-0.21-r2 235
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.5 (GNU/Linux)
+Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFG39ZKVSA5X31g7/gRAh0XAJ9R/9zYaQ4A6ERXwk5e6DnI+sQK9wCgkqdV
-4oo81Nuvf5lSbmlWnVxKDhI=
-=RgXY
+iD8DBQFG45ZSVSA5X31g7/gRAjkYAJ4jgW6rdoPy4ypdq6CkE97vpr9EHACgjN7D
+RFh3d9wK4fWmbuzKJzeRMxY=
+=X34u
 -----END PGP SIGNATURE-----
